<resources>
    <string name="app_name">CastMe!</string>
    <string name="new_post">New Post!!</string>
    <string name="hint_email">Email ...</string>
    <string name="hint_pass">Password ...</string>
    <string name="register_now">Register Now</string>
    <string name="dont_have_account">Don\'t Have an Accoun?</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="email">Email</string>
    <string name="action_search_text">Search</string>
    <string name="account_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="hint_conf_pass">Confirm Password...</string>
    <string name="btn_register_now">REGISTER NOW</string>
    <string name="setup_name_hint">Your Name ...</string>
    <string name="setup_name_btn">SAVE ACCOUNT SETTINGS</string>
    <string name="add_caption">Add Caption...</string>
    <string name="post">POSTING</string>
    <string name="botnav_home_text">Home</string>
    <string name="botnav_notif_text">Notification</string>
    <string name="botnav_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_here">Comment here...</string>
</resources>
